--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
     <title>Document</title>
@@ -11,11 +11,17 @@
 <body>
     
  <input type="text" class="monthYearRangeInput" placeholder="Select Month and Year Range">
+
+ <input type="text" id="myid" placeholder="Date month">
+
+
  <button id="getValue">Get </button>
- <script type="text/javascript" src="test.js"></script>
+ <script type="text/javascript" src="index.js"></script>
  <script>
     const input = document.querySelector(".monthYearRangeInput");
     const monthYearPicker = new MonthYearPicker(input);
+    const input2 =  document.getElementById('myid');
+    new MonthYearPicker(input2);
 
     var elem = document.getElementById('getValue');
     elem.addEventListener('click',function(){
