--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <h2>This is month year picker</h2>
+  <h4> See live here </h4>
  <input type="text" class="monthYearRangeInput" placeholder="Select Month and Year Range">
  <script type="text/javascript" src="month-year-picker.js"></script>
  <script>
